feat: add endpoint for dashboard user
